--- a/06_DOM/two.html
+++ b/06_DOM/two.html
@@ -3,14 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM Learning</title>
 </head>
-<body>
+<body style="background-color: #212121; color: azure;">
     <div class="parent">
+        <!-- This is a comment -->
         <div class="day">Monday</div>
         <div class="day">Tuesday</div>
         <div class="day">Wednesday</div>
         <div class="day">Thrusday</div>
     </div>
 </body>
+<script>
+    const parent = document.querySelector('.parent');
+    console.log(parent);
+    console.log(parent.children[1].innerHTML);
+
+    // for (let i = 0; i < parent.children.length; i++) {
+    //     console.log(parent.children[i].innerHTML);   
+    // }
+
+    parent.children[1].style.color='orange';
+    parent.children[2].style.color='pink';
+
+    // console.log(parent.firstElementChild);
+    // console.log(parent.lastElementChild);
+
+    const oneday = document.querySelector('.day');
+    // console.log(oneday);
+    // console.log(oneday.parentElement);
+    // console.log(oneday.nextElementSibling);
+
+    console.log("Node: ", parent.childNodes);
+    
+</script>
 </html>
