--- a/06_DOM/three.html
+++ b/06_DOM/three.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM</title>
 </head>
-<body>
+<body style="background-color: #212121; color: #fff;">
     
 </body>
+<script>
+    const div = document.createElement('div');
+    console.log(div);
+    div.className='main';
+    div.id=Math.round(Math.random() * 10 + 1);
+    div.setAttribute("title", "generated title");
+    div.style.background='green';
+    div.style.padding='12px';
+    div.style.borderRadius='15px';
+   // div.innerHTML="Kaushiki is learning Js."
+    const addText = document.createTextNode("Kaushiki is learning js.")
+    div.appendChild(addText);
+
+    document.body.appendChild(div);
+</script>
 </html>
