--- a/06_DOM/three.html
+++ b/06_DOM/three.html
@@ -18,7 +18,7 @@
     div.style.padding='12px';
     div.style.borderRadius='15px';
    // div.innerHTML="Kaushiki is learning Js."
-    const addText = document.createTextNode("Kaushiki is learning js.")
+    const addText = document.createTextNode("Kaushiki is learning js.");
     div.appendChild(addText);
 
     document.body.appendChild(div);
