--- a/07_Projects/02_BmiSelector/index.html
+++ b/07_Projects/02_BmiSelector/index.html
@@ -23,6 +23,9 @@
         </div>
       </form>
     </div>
+    <footer style="text-align: center;">
+        Made By <a href="https://github.com/Kaushiki1630"> Kaushiki </a>
+    </footer>
   </body>
   <script src="javascript.js"></script>
 </html>
