--- a/07_Projects/03_digitalClock/index.html
+++ b/07_Projects/03_digitalClock/index.html
@@ -8,24 +8,54 @@
     <title>Digital Clock</title>
     <style>
       body {
-        background-color: #212121;
-        color: #fff;
-      }
-      .center {
-        display: flex;
-        height: 100vh;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-      }
-      #clock {
-        font-size: 40px;
-        background-color: orange;
-        padding: 20px 50px;
-        margin-top: 10px;
-        border-radius: 10px;
-      }
-    </style>
+  background: linear-gradient(135deg, #1a1a1a, #333);
+  color: #fff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.center {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+#banner {
+  font-size: 22px;
+  letter-spacing: 2px;
+  color: #f5f5f5;
+  margin-bottom: 15px;
+  opacity: 0.8;
+}
+
+#clock {
+  font-size: 60px;
+  font-weight: bold;
+  letter-spacing: 4px;
+  background: #ff9800;
+  padding: 25px 60px;
+  border-radius: 15px;
+  box-shadow: 0 8px 20px rgba(255, 152, 0, 0.4), 
+              0 0 20px rgba(255, 152, 0, 0.7);
+  animation: glow 1.5s infinite alternate;
+}
+
+/* Glowing animation */
+@keyframes glow {
+  from {
+    box-shadow: 0 0 10px rgba(255, 152, 0, 0.5), 
+                0 0 20px rgba(255, 152, 0, 0.7);
+  }
+  to {
+    box-shadow: 0 0 25px rgba(255, 152, 0, 0.8), 
+                0 0 40px rgba(255, 152, 0, 1);
+  }
+}
+  </style>
   </head>
   <body>
     <div class="center">
