--- a/08_Events/01_UnlimitedColors/index.html
+++ b/08_Events/01_UnlimitedColors/index.html
@@ -12,6 +12,6 @@
     <h1>Start should change the Background color every second</h1>
     <button id="start">Start</button>
     <button id="stop">Stop</button>
-    <script src="javascript.js"></script>
+    <script src="./javascript.js"></script>
   </body>
 </html>
