--- a/11_Other_Concepts/01_closure.html
+++ b/11_Other_Concepts/01_closure.html
@@ -8,4 +8,40 @@
 <body>
     
 </body>
+<script>
+    // function init(){
+    //     let name = "Mozilla";
+    //     function displayName(){
+    //         console.log(name);
+    //     }
+
+    //     displayName();
+    // }
+
+    // init();
+
+    // Example
+
+    function outer(){
+        let username = "hitesh"
+        console.log("OUTER", secret);
+        function inner(){
+            let secret = "my123"
+            console.log("inner", username);
+        }
+        function innerTwo(){
+            console.log("innerTwo", username);
+            console.log(secret);
+        }
+        inner()
+        innerTwo()
+
+    }
+    outer()
+    console.log("TOO OUTER", username);
+
+
+
+
+</script>
 </html>
